--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "sanitize-html": "^2.13.1",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   },
