--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,9 @@
 BCRYPT_SALT=10
 JWT_SECRET="teste"
+BASE_URL="http://localhost:5173"
+EMAIL_HOST="smtp.mailtrap.io"
+EMAIL_PORT=2525
+EMAIL_SERVICE="Gmail"
+EMAIL_SECURE=false
+EMAIL_USER="user"
+EMAIL_SENHA="pass"
